# gtk-libide

./: .gitignore  CMakeLists.txt  README.md  config.h.in
src/core/: ide-global.c  ide-marshal.h
src/threading/: ide-environment.c  ide-win32-fd-map.h
